[workspace]
members = ["examples", "rqlite-rs", "rqlite-rs-macros", "rqlite-rs-core"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Tom Voet <tomvoet@pm.me>"]
edition = "2021"
keywords = ["rqlite", "database", "async"]
categories = ["database", "asynchronous"]
repository = "https://github.com/tomvoet/rqlite-rs"
rust-version = "1.71.1"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
thiserror = "1.0.64"
base64 = "0.22.1"
