[workspace]
members = ["examples", "rqlite-rs", "rqlite-rs-macros", "rqlite-rs-core"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Tom Voet <tomvoet@pm.me>"]
edition = "2021"
keywords = ["rqlite", "database", "async"]
categories = ["database", "asynchronous"]
repository = "https://github.com/tomvoet/rqlite-rs"
rust-version = "1.81.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
must_use_candidate = "allow"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "warn"
exit = "deny"
indexing_slicing = "deny"
infinite_loop = "warn"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
missing_assert_message = "warn"
print_stdout = "warn"
print_stderr = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_slice = "warn"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unneeded_field_pattern = "warn"
