[package]
edition = "2021"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
rqlite-rs = { version = "0.3.12", path = "../rqlite-rs" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.81"

[[example]]
name = "list-tables"
path = "list-tables.rs"

[[example]]
name = "get-nodes"
path = "get-nodes.rs"

[[example]]
name = "batch"
path = "batch.rs"

[[example]]
name = "fallback-node"
path = "fallback-node.rs"

[[example]]
name = "https"
path = "https.rs"
