[package]
edition = "2021"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
rqlite-rs = { path = "../rqlite-rs", version = "0.5.0", features = [] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.90"

[[example]]
name = "list-tables"
path = "list-tables.rs"
doc-scrape-examples = true


[[example]]
name = "get-nodes"
path = "get-nodes.rs"
doc-scrape-examples = true

[[example]]
name = "batch"
path = "batch.rs"
doc-scrape-examples = true

[[example]]
name = "fallback-node"
path = "fallback-node.rs"
doc-scrape-examples = true

[[example]]
name = "basic-auth"
path = "basic-auth.rs"
doc-scrape-examples = true

[[example]]
name = "https"
path = "https.rs"
doc-scrape-examples = true

[[example]]
name = "option"
path = "option.rs"
doc-scrape-examples = true

[[example]]
name = "blob"
path = "blob.rs"
doc-scrape-examples = true
