[package]
name = "rqlite-rs-core"
version = "0.2.7"
edition = "2021"
publish = true
license = "MIT"
description = "Core library for rqlite-rs"
repository = "https://github.com/tomvoet/rqlite-rs"
readme = "../README.md"
keywords = ["rqlite", "database", "async"]
categories = ["database", "asynchronous"]
authors = ["Tom Voet <tomvoet@pm.me>"]
documentation = "https://docs.rs/rqlite-rs/"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
