[package]
name = "rqlite-rs-core"
version = "0.3.1"
publish = true
description = "Core library for rqlite-rs"
readme = "../README.md"
documentation = "https://docs.rs/rqlite-rs/"
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
fast-blob = ["base64"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64 = { workspace = true, optional = true }
