[package]
name = "rqlite-rs-macros"
version = "0.2.10"
publish = true
description = "Proc-macros for rqlite-rs"
readme = "../README.md"
documentation = "https://docs.rs/rqlite-rs/"
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
rqlite-rs-core = { version = "0.2.11", path = "../rqlite-rs-core" }
syn = { version = "2.0.79", features = ["full", "parsing"] }
