[package]
name = "rqlite-rs-macros"
version = "0.2.11"
publish = true
description = "Proc-macros for rqlite-rs"
readme = "../README.md"
documentation = "https://docs.rs/rqlite-rs/"
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
blob = ["rqlite-rs-core/blob"]

[dependencies]
quote = "1.0.37"
rqlite-rs-core = { version = "0.2.12", path = "../rqlite-rs-core" }
syn = { version = "2.0.79", features = ["full", "parsing"] }
