[package]
name = "rqlite-rs-macros"
version = "0.3.1"
publish = true
description = "Proc-macros for rqlite-rs"
readme = "../README.md"
documentation = "https://docs.rs/rqlite-rs/"
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
fast-blob = ["rqlite-rs-core/fast-blob"]

[dependencies]
quote = "1"
rqlite-rs-core = { version = "0.3.1", path = "../rqlite-rs-core" }
syn = { version = "2", features = ["full", "parsing"] }
