[package]
name = "rqlite-rs"
version = "0.3.17"
edition = "2021"
publish = true
license = "MIT"
description = "Async rqlite client for Rust"
repository = "https://github.com/tomvoet/rqlite-rs"
readme = "../README.md"
keywords = ["rqlite", "database", "async"]
categories = ["database", "asynchronous"]
authors = ["Tom Voet <tomvoet@pm.me>"]
documentation = "https://docs.rs/rqlite-rs/"

[features]
default = ["macros", "native-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

macros = ["rqlite-rs-macros"]

[dependencies]
rqlite-rs-macros = { version = "0.2.8", path = "../rqlite-rs-macros", optional = true }
rqlite-rs-core = { version = "0.2.9", path = "../rqlite-rs-core" }
reqwest = { version = "0.12.5", default-features = false }
base64 = "0.22.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = "1.38.0"
